Initial commit of virtual Keyboard based on the EFL
Edje layout copied from Enlightenment SVN repository (iclone)
http://svn.enlightenment.org/svn/e/trunk/BINDINGS/python/python-edje/examples/evas-demo/02-vkbd/

Video: http://www.youtube.com/watch?v=TrWpUBTDDr0

Signed-off-by: Eduardo Lima (Etrunko) <eduardo.lima@intel.com>

--- a/clients/.gitignore
+++ b/clients/.gitignore
@@ -31,6 +31,7 @@ text-cursor-position-protocol.c
 text-protocol.c
 transformed
 view
+vkbd-efl
 weston-desktop-shell
 weston-info
 weston-screensaver
