Make special keys configurable
Signed-off-by: Eduardo Lima (Etrunko) <eduardo.lima@intel.com>

--- a/data/vkbd-efl/Makefile.am
+++ b/data/vkbd-efl/Makefile.am
@@ -10,6 +10,7 @@ filesdir = $(pkglibexecdir)
 files_DATA = iclone.edj
 
 ICLONE_FILES = iclone/iclone.edc \
+	       iclone/specialkeys.txt \
 	       iclone/images/keyboard-background.png \
 	       iclone/images/backspace.png \
 	       iclone/images/key-special.png \
